force-app/main/default/objects/Lead/fields/Country_Info__c.field-meta.xml
<CustomField>
    <fullName>Country_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country Info</label>
    <referenceTo>Country_Info__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>