force-app/main/default/objects/Lead/fields/Country_ISO_Alpha2__c.field-meta.xml
<CustomField>
    <fullName>Country_ISO_Alpha2__c</fullName>
    <formula>Country_Info__r.ISO_Alpha2__c</formula>
    <label>Country ISO Alpha-2</label>
    <type>Text</type>
</CustomField>