force-app/main/default/objects/Lead/fields/Country_ISO_Alpha3__c.field-meta.xml
<CustomField>
    <fullName>Country_ISO_Alpha3__c</fullName>
    <formula>Country_Info__r.ISO_Alpha3__c</formula>
    <label>Country ISO Alpha-3</label>
    <type>Text</type>
</CustomField>