force-app/main/default/objects/Lead/fields/Country_Region__c.field-meta.xml
<CustomField>
    <fullName>Country_Region__c</fullName>
    <formula>Country_Info__r.Region__c</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>