force-app/main/default/objects/Lead/fields/Country_Subregion__c.field-meta.xml
<CustomField>
    <fullName>Country_Subregion__c</fullName>
    <formula>Country_Info__r.Subregion__c</formula>
    <label>Subregion</label>
    <type>Text</type>
</CustomField>