force-app/main/default/objects/Lead/fields/Regional_Blocks__c.field-meta.xml
<CustomField>
    <fullName>Regional_Blocks__c</fullName>
    <formula>Country_Info__r.RegionalBlocks__c</formula>
    <label>Regional Blocks</label>
    <type>Text</type>
</CustomField>