force-app/main/default/objects/Lead/validationRules/ChangeOwnerValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ChangeOwnerValidation</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(OwnerId) &amp;&amp; 
(
 ISPICKVAL(LeadSource,&apos;&apos;) || 
(ISBLANK(NumberOfEmployees) &amp;&amp;  $Profile.Name != &apos;System Administrator&apos; &amp;&amp; $Profile.Name != &apos;Contract Manager&apos;) ||
(ISBLANK(Country) &amp;&amp;  $Profile.Name != &apos;System Administrator&apos;)
)</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>You can&apos;t change the owner.</errorMessage>
</ValidationRule>